# TicTacToeRust

./: Cargo.toml  database.sql
src/: main.rs
ui/: app-window.slint
